projects/instavote/dev/results-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: results
  namespace: instavote
spec: 
  xxx
