projects/instavote/dev/vote-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vote
  namespace: instavote
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: front
      app: vote
    matchExpressions:
      - {key: tier, operator: In, values: [front]}
  revisionHistoryLimit: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  minReadySeconds: 20
  paused: false
  template:
    metadata:
      labels:
        app: vote
        role: ui
        tier: front
    spec:
      containers:
      - image: schoolofdevops/vote:movies
        imagePullPolicy: Always
        name: vote
        ports:
        - containerPort: 80
          protocol: TCP
