projects/instavote/dev/vote-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vote 
  labels: 
    app: python 
    role: vote 
    version: v1 
spec:
  containers: 
    - name: app 
      image: schoolofdevops/vote:v1 
      resources:
        requests:
          memory: "64Mi"
          cpu: "50m"
        limits: 
          memory: "128Mi"
          cpu: "250m"
