projects/instavote/dev/vote-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    role: svc
    tier: front
  name: vote
  namespace: instavote
spec:
  selector:
    app: vote
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
  externalIPs:
    - 10.40.1.26
    - 10.40.1.25
